# datagen

./: .gitignore  config.yaml  lg.py  main.py  pyproject.toml  test.py
agents/: README.md  chunks.py  config.yaml  fe.py  lg.py  new.py
agents/nodes/: agent_node.py
agents/tests/: test_agent.py  test_agent_node.py
frontend/: App.jsx
legacy/qa/: a.py  chunk_manager.py  config.py  data.py  main.py  prompt.txt  q.py  search.py
legacy/qa/test/: test_qa.py
output/: my_dataset.jsonl
parser/: README.md  chunks.py  configs.py  converter.py  docs.py  embeddings.py  parser.py
parser/tests/: test_docs.py
parser/tests/input/test_docs/: GNU gettext utilities.html  JCSS2025word_ab_jp.docx  Japanese-Language-Template-250422.docx  manuscript_2025_format_yoko_JP.docx
parser/tests/output/: consolidated.md
parser/tests/output/chroma_db/: chroma.sqlite3
tests/: chroma_read.py
utils/: errors.py  logger.py
vllmTest/: structOut.py
