[project]
name = "datagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "bs4>=0.0.2",
    "chromadb>=1.4.1",
    "hf-transfer>=0.1.9",
    "html2text>=2025.4.15",
    "huggingface-hub>=0.34,<1.0",
    "isort>=7.0.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "mineru>=2.7.1",
    "numpy<=2.2",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "tqdm>=4.67.1",
]
